; ModuleID = '/home/carl/AnghaBench/nnn/src/extr_nnn.c_startselection.c'
source_filename = "/home/carl/AnghaBench/nnn/src/extr_nnn.c_startselection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@cfg = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@nselected = common dso_local global i64 0, align 8
@selbufpos = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @startselection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @startselection() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cfg, i32 0, i32 0), align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %10, label %3

3:                                                ; preds = %0
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cfg, i32 0, i32 0), align 4
  store i64 0, i64* @nselected, align 8
  %4 = load i64, i64* @selbufpos, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %3
  %7 = call i32 (...) @resetselind()
  %8 = call i32 @writesel(i32* null, i32 0)
  store i64 0, i64* @selbufpos, align 8
  br label %9

9:                                                ; preds = %6, %3
  br label %10

10:                                               ; preds = %9, %0
  ret void
}

declare dso_local i32 @resetselind(...) #1

declare dso_local i32 @writesel(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
